resources/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: stanbic-getting-started
  name: stanbic-getting-started
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: stanbic-getting-started
  sessionAffinity: None
  type: ClusterIP
