resources/app/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: stanbic-getting-started
  name: stanbic-getting-started
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: stanbic-getting-started
    weight: 100
